# proj_maas_back

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml
api/modelos/: __init__.py
api/modelos/clientes/: cliente.py
api/modelos/entregas/: entrega.py  transportador.py
api/rotas/clientes/: cliente.py
api/rotas/entregas/: entrega.py  transportador.py
api/utilitarios/: autenticacao.py
banco/: __init__.py  banco.db  tipos.py
banco/repositorios/: __init__.py  cliente.py
banco/tabelas/: autenticacao.py  cliente.py  entrega.py  transportador.py
servidor/: __init__.py
